--- a/config/index.html
+++ b/config/index.html
@@ -30,8 +30,13 @@
 			</label>
 
 			<label class='item'>
-				Use Celsius?
+				Use Celsius
 				<input id='useCelsius' type='checkbox' class='item-checkbox'>
+			</label>
+
+			<label class='item'>
+				Shake for weather
+				<input id='shakeWeather' type='checkbox' class='item-checkbox' checked>
 			</label>
 		</div>
 	</div>
@@ -39,6 +44,15 @@
 	<div class='item-container'>
 		<div class='button-container'>
 			<input id='submitButton' type='button' class='item-button' value='SAVE'>
+		</div>
+	</div>
+
+	<div id='foot' class='item-container'>
+		<div class='item-container-footer'>
+			<div class='item'>
+				Glober Bold by Turner Vink<br>
+				Contact me at www.turnervink.com
+			</div>
 		</div>
 	</div>
 
